# sealos-brain

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
agent/: pyproject.toml
agent/sample_agent/: agent.py
apps/ai/: .env.example  .gitignore  components.json  langgraph.json  package.json  tsconfig.json
apps/doc/: .gitignore  package.json
apps/frontend/: biome.json  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
copilot/: README.md  langgraph.json  pyproject.toml
copilot/src/: __init__.py
copilot/src/agent/: chat_agent.py  code_agent.py  sample_agent.py  sealos_agent.py
copilot/src/provider/: backbone_provider.py
copilot/src/state/: codebase_state.py
copilot/src/tool/: codebase_tool.py
copilot/src/utils/: context_utils.py
cypress/: README.md
cypress/component/: api-routes.cy.ts  sealos-api.cy.ts
cypress/script/: create-devbox.js
src/: payload-types.ts  payload.config.ts
src/app/: layout.tsx  page.tsx
src/context/: app-sidebar-provider.tsx  copilot-state-provider.tsx  devbox-selection-provider.tsx  panel-provider.tsx  sealos-store-hydrator.tsx  sidebar-state-provider.tsx
src/hooks/: use-devbox-networks.ts  use-devbox-sidebar.ts  use-graph-copilot-chat.ts  use-graph-edge.ts  use-graph-layout.ts  use-graph-layout.tsx  use-graph-node.ts  use-graph-overview.ts  use-graph-specific.ts  use-graph.ts  use-resources.ts  use-sealos-account.ts  use-sealos-auth.ts  use-sealos-devbox.ts  use-sidebar-control.ts  use-sidebar-resize.ts  use-sidebar-visibility.ts  (+1 more)
(+727 files in other folders)
