[project]
name = "copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.2.6",
    "copilotkit>=0.1.49",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.1",
    "pydantic>=2.11.5",
    "returns>=0.25.0",
]
